# mlops_lab11

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml  workflows_report.md
.github/workflows/: ci_cd_workflow.yaml
src/: app.py
src/api/models/: sentiment_analysis.py
src/core/: model_repository.py  sentiment_analyzer.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py
src/utils/: config.py  logger.py
tests/: test_app.py  test_config.py  test_model_repository.py  test_sentiment_analyzer.py
