[project]
name = "mlops-homework1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.42.1",
  "clean-text>=0.6.0",
  "fastapi>=0.118.2",
  "joblib>=1.5.2",
  "markupsafe<3.1",
  "pydantic-settings>=2.11.0",
  "sentence-transformers>=5.1.1",
  "torch>=2.7.0",
  "transformers>=4.57.0",
  "uvicorn>=0.37.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
