[project]
name = "mlops-homework1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
]

[dependency-groups]
integration = [
  "pytest",
  "mypy",
  "ruff",
  "pre-commit",
  "fastapi>=0.118.2",
  "scikit-learn>=1.7.2",
  "sentence-transformers>=5.1.1",
  "pydantic-settings>=2.11.0",
  "onnxruntime>=1.18.0",
  "tokenizers>=0.19.1",
]

deployment = [
  "fastapi>=0.118.2",
  "boto3>=1.42.1",
  "markupsafe<3.1",
  "pydantic-settings>=2.11.0",
  "sentence-transformers>=5.1.1",
  "skl2onnx",
  "onnx",
]

inference = [
  "fastapi>=0.118.2",
  "uvicorn>=0.37.0",
  "pydantic-settings>=2.11.0",
  "onnxruntime>=1.18.0",
  "tokenizers>=0.19.1",
  "awslambdaric>=3.1.1",
  "mangum>=0.19.0",
]

dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
]
